Refactor use cases and controllers to utilize Lombok for constructor injection and improve code readability